# Aurray

./: CMakeLists.txt
include/aurray/: aurray.hpp  aurray_nd.hpp
src/: aurray.cpp  aurray_nd.cpp
test/: test.cpp
